# RCPGenerator

./: PackingSpheres.md  PackingSpheresInPython.md  README.md  index.md
c++/: InitializeParticles.cpp  RCPGenerator.cpp  generate_packings.sh  generate_packings2.sh  generate_single_case.sh  install.txt  install.txt.txt
c++_old/: InitializeParticles.cpp  RCPGenerator.cpp  install.txt.txt
matlab/: CreatePacking.m  example.m  initialize_particlesND.m  plot_particles_3D.m
matlab_old/: CreatePacking.m  example.m  plot_particles_3D.m  plot_particles_periodic.m  writetext.m
python_code/: RCPGenerator.cpp
python_code/python/: CMakeLists.txt  README.md  getting_started.ipynb  pyproject.toml
python_code/python/examples/: _common.py  example_2d_bidisperse_box.py  example_2d_powerlaw_phi_staging.py  example_3d_bidisperse_box.py  example_3d_cylindrical_container.py  example_3d_monodisperse_box.py  minimal.py
python_code/python/include/rcpgenerator/: initialize_particles.hpp  rcp_generator.hpp
python_code/python/python/rcpgenerator/: _wrapper.py  render.py
python_code/python/src/bindings/: module.cpp
python_code/python/src/core/: initialize_particles.cpp  rcp_generator.cpp
python_code/python/tests/: initializer_parity.cpp  packer_parity.cpp
python_parallel/: CMakeLists.txt  getting_started.ipynb
python_parallel/ReferenceCode/matlab/: CreatePacking.m  example.m  initialize_particlesND.m  plot_particles_periodic.m  writetext.m
python_parallel/examples/: example_2d_polydisperse_box.py  example_3d_spherical_container.py  run_all_examples.py  starter.py
python_parallel/experimental/python/: CMakeLists.txt  README.md
python_parallel/experimental/python/examples/: example_2d_circular_container.py
python_parallel/experimental/python/include/rcpgenerator/: initialize_particles.hpp  rcp_generator.hpp
python_parallel/experimental/python/python/rcpgenerator/: __init__.py  _wrapper.py  render.py
python_parallel/experimental/python/src/bindings/: module.cpp
python_parallel/experimental/python/src/core/: initialize_particles.cpp  rcp_generator.cpp
python_parallel/experimental/python/tests/: skew_periodic_regression.cpp
python_parallel/planning/: skew_boundary_handoff.md  skew_boundary_plan.md
python_parallel/planning/logs/: baseline_results.md  performance_results.md  session_log.md  skew_cases.md
python_parallel/src/bindings/: module.cpp
python_parallel/src/core/: rcp_generator.cpp
python_parallel/tests/: hard_wall_regression.cpp
python_parallel2/: CMakeLists.txt  README.md
python_parallel2/include/rcpgenerator/: rcp_generator.hpp
python_parallel2/python/rcpgenerator/: render.py
python_parallel2/rcp_search/: __init__.py  jobs.py  model.py  overlap.py  persistence.py  search.py  studies.py  time_aware.py
python_parallel2/src/bindings/: module.cpp
python_parallel2/src/core/: rcp_generator.cpp
python_parallel3/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
python_parallel3/include/rcpgenerator/: initialize_particles.hpp  rcp_generator.hpp
python_parallel3/packing_analysis/: __init__.py  chord_boxbin.py  chord_cut.py  chord_study.py  porefill.py  porenet.py  registry.py  voidfill_method.py
python_parallel3/python/rcpgenerator/: __init__.py  _wrapper.py
python_parallel3/rcp_search/: __init__.py  _helpers.py  bundling.py  census.py  diagnostics.py  jobs.py  model.py  overlap.py  queue_scheduler.py  rcp_generator.cpp  scheduler.py  search.py  search_v2.py  snapshot.py  studies.py  sweep.py  voronoi.py
python_parallel3/src/bindings/: module.cpp
python_parallel3/src/core/: initialize_particles.cpp  rcp_generator.cpp
python_parallel3/webapp/: README.md  bridge.py  build.py  gallery.py  gen_extreme2d.py  gen_lognormal2d.py  launch.py
python_parallel3/webapp/app/: index.html
python_parallel3/webapp/app/js/: app.js  color.js  colormap.js  diag.js  export.js  loader.js  overlay_pores.js  palettes.js  render2d.js  slice.js  stats.js  ui.js  wrap.js
python_parallel3/webapp/packings/: cons_test.npz
python_parallel3/webapp/tests/: harness.py  test_3d.py  test_background.py  test_core.py  test_features.py  test_load.py  test_nav.py  test_overlay.py  test_palettes.py  test_pores.py  test_standalone.py  test_ui.py
webapp/: index.html
