[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "rcpgenerator"
version = "0.0.1"
description = "Refactored RCPGenerator scaffold"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.10"]

[tool.scikit-build]
cmake.source-dir = "."
build.verbose = true

